# Hypothesis-Testing-Auxiliary-Calculator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_GUIDE.md  LICENSE  README.md  calculadora_testes_hipoteses.py  fórmulas_principais.md  hypothesis_calc.py  pyproject.toml  requirements.txt  setup.py
